@@ -7,6 +7,8 @@
 	src/libs/include/cerebro/cerebro_config.h,
 	src/cerebrod/cerebrod_util.c: Various code cleanup.  Rehash hashes
 	as needed.  Remove need for listener_data_list.
+
+	* man/cerebro_module_devel.3.in: Add forgotten headers.
 	
 2006-10-29  Albert Chu  <chu11@llnl.gov>
 
